SCSS-colors,fonts+breakpoints

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kavarna</title>
-    <link rel="stylesheet" href="css/styly.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700,900&display=swap&subset=latin-ext" rel="stylesheet">    
@@ -50,10 +50,10 @@
                 <p>Netradiční kavárna,kde</p>
                 <p>najdeš mnohem více než jen</p>
                 <p>výběrovou kávu a dezerty.</p>
-                <!-- <a href="#">
+                <a href="#">
                     <i class="fas fa-angle-double-right"> </i>
                     Speciální nabídka
-                </a>                -->
+                </a>               
             </div>
         </div>
 
@@ -139,26 +139,16 @@
                         <li>Holešovice</li>
                      </ul>   
                 </div>
-
-                <div class="fb"></div>
             </div>
         </div>
 
     <div class="copy">
         <div class="container">
             <div class="copyL">
-                &copy; copyright 2019 <b>PrimaKavárna</b> /
+                &copy; copyright 2023 <b>PrimaKavárna</b> /
                 <a href="#">Ochrana osobních údajů </a> /
                 <a href="#">O cookies</a>
-            </div>
-        
-          <div class="copyLmin">
-              <p>&copy; copyright 2019 <b>PrimaKavárna</b></p>
-              <p><a href="#">Ochrana osobních údajů </a></p>
-              <p><a href="#">O cookies</a></p>
-          </div>  
-
-
+            </div>        
 
             <div class="copyR">
                 Vytvořil: <a href="#" target="_blank">Kristýna</a>
