Header+Footer=mixins (headline, button) + nesting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>Netradiční kavárna,kde</p>
                 <p>najdeš mnohem více než jen</p>
                 <p>výběrovou kávu a dezerty.</p>
-                <a href="#">
+                <a class="main-button"href="#">
                     <i class="fas fa-angle-double-right"> </i>
                     Speciální nabídka
                 </a>               
