Kontakt + Rezervace pages - nesting

--- a/kontakt.html
+++ b/kontakt.html
@@ -65,10 +65,6 @@
           <p>Netradiční kavárna,kde</p>
           <p>najdeš mnohem více než jen</p>
           <p>výběrovou kávu a dezerty.</p>
-          <!-- <a href="#">
-            <i class="fas fa-angle-double-right"> </i>
-            Speciální nabídka
-          </a> -->
         </div>
       </div>
 
@@ -118,7 +114,7 @@
               <i class="fab fa-cc-visa"></i>
               <i class="fab fa-cc-mastercard"></i> Přijímáme platební Karty
             </p>
-            <p><a href="#">Rezervovat místo</a></p>
+            <p><a class="main-button" href="#">Rezervovat místo</a></p>
           </div>
         </div>
         <div class="map">
@@ -140,7 +136,7 @@
               <input type="text" name="prijmeni" placeholder="Příjmení" />
               <input type="text" name="mail" placeholder="E-mail" />
               <textarea name="vzkaz" placeholder="Napište nám..."></textarea>
-              <input type="submit" value="Odeslat" />
+              <input class="main-button" type="submit" value="Odeslat" />
             </form>
           </div>
         </div>
@@ -175,15 +171,9 @@
       <div class="copy">
         <div class="container">
           <div class="copyL">
-            &copy; copyright 2023 <b>PrimaKavárna</b> /
-            <a href="#">Ochrana osobních údajů </a> /
+            &copy; copyright 2023 <b>PrimaKavárna</b>
+            <a href="#">Ochrana osobních údajů </a>
             <a href="#">O cookies</a>
-          </div>
-
-          <div class="copyLmin">
-            <p>&copy; copyright 2023 <b>PrimaKavárna</b></p>
-            <p><a href="#">Ochrana osobních údajů </a></p>
-            <p><a href="#">O cookies</a></p>
           </div>
 
           <div class="copyR">
