--- a/nabidka.html
+++ b/nabidka.html
@@ -78,10 +78,6 @@
           <p>Netradiční kavárna,kde</p>
           <p>najdeš mnohem více než jen</p>
           <p>výběrovou kávu a dezerty.</p>
-          <!-- <a href="#">
-            <i class="fas fa-angle-double-right"> </i>
-            Speciální nabídka
-          </a> -->
         </div>
       </div>
 
@@ -167,8 +163,7 @@
 
             <p>Minerální voda Coralba 0,75L / 40 Kč</p>
           </div>
-
-          <a class="nahoru" href="#nahoru">NAHORU</a>
+          <a class="main-button">NAHORU</a>
         </div>
       </div>
     </section>
@@ -189,7 +184,7 @@
           <div class="footerKontakt">
             <h4>Kontakt</h4>
             <ul>
-              <li>PrimaKavárna /</li>
+              <li>PrimaKavárna</li>
               <li>Jablonského 2</li>
               <li>Praha</li>
               <li>Holešovice</li>
@@ -204,12 +199,6 @@
             &copy; copyright 2023 <b>PrimaKavárna</b> /
             <a href="#">Ochrana osobních údajů </a> /
             <a href="#">O cookies</a>
-          </div>
-
-          <div class="copyLmin">
-            <p>&copy; copyright 2023 <b>PrimaKavárna</b></p>
-            <p><a href="#">Ochrana osobních údajů </a></p>
-            <p><a href="#">O cookies</a></p>
           </div>
 
           <div class="copyR">
