all pages-scss-nesting+mixins

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                     <form action="#" method="get" class=>
                         <input type="email" name="email" placeholder="Zadejte Váš e-mail">
-                        <input type="submit">
+                        <input class="main-button" type="submit">
                     </form>
                 </div>
 
