--- a/rezervace.html
+++ b/rezervace.html
@@ -78,10 +78,6 @@
           <p>Netradiční kavárna,kde</p>
           <p>najdeš mnohem více než jen</p>
           <p>výběrovou kávu a dezerty.</p>
-          <!-- <a href="#">
-            <i class="fas fa-angle-double-right"> </i>
-            Speciální nabídka
-          </a> -->
         </div>
       </div>
 
@@ -118,7 +114,7 @@
             </p>
             <p>
               <i class="far fa-envelope"></i> Psát na mail:
-              <span>info@primakavarna.cz</span>
+              <a>info@primakavarna.cz</a>
             </p>
             <p>
               <i class="fab fa-wpforms"></i> Nebo můžete využít náš rezervační
@@ -126,7 +122,7 @@
             </p>
           </div>
           <div class="formular"></div>
-          <h2>Těšíme se na Vaši návštěvu, brzy na viděnou.</h2>
+          <h3>Těšíme se na Vaši návštěvu, brzy na viděnou.</h3>
         </div>
       </div>
     </section>
