--- a/kontakt.html
+++ b/kontakt.html
@@ -93,7 +93,7 @@
               <p><b>PrimaKavarna, Jablonského 2, Holešovice</b></p>
               <p>
                 <i class="far fa-envelope"></i>
-                <span>info@primakavarna.cz</span>
+                <a href="mailto:info@primakavarna.cz">info@primakavarna.cz</a>
               </p>
               <p>
                 <i class="fas fa-phone-alt"></i>
@@ -114,7 +114,7 @@
               <i class="fab fa-cc-visa"></i>
               <i class="fab fa-cc-mastercard"></i> Přijímáme platební Karty
             </p>
-            <p><a class="main-button" href="#">Rezervovat místo</a></p>
+            <a class="main-button" href="#">Rezervovat místo</a>
           </div>
         </div>
         <div class="map">
